<resources>
    <string name="app_name">Tasky</string>

    <!-- Screens -->
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="agenda">Agenda</string>

    <!-- Login Screen -->
    <string name="welcome_back">Welcome Back!</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>

    <!-- Register Screen -->
    <string name="create_your_account">Create your account</string>
    <string name="name">Name</string>
    <string name="get_started">Get Started</string>

    <!-- Validation -->
    <string name="validation_error_email_blank">The email can\'t be blank</string>
    <string name="validation_error_email_invalid">This is not a valid email address</string>
    <string name="validation_error_password_empty">Password is empty</string>
    <string name="validation_error_password_length">Password must be greater than 8 characters</string>
    <string name="validation_error_password_no_lowercase">Password must have at least one lowercase character</string>
    <string name="validation_error_password_no_number">Password must contain at least one number</string>
    <string name="validation_error_password_no_uppercase">Password must contain at least one uppercase character</string>
    <string name="validation_error_username_invalid_length">Username must be between 4 and 50 characters in length</string>

</resources>