<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.norvellium.tasky.ui.login.LoginViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        tools:context=".ui.login.LoginFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/Theme.Tasky.Styled.TextView.Inter.Regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="50dp"
                    android:text="@string/welcome_back"
                    android:textColor="@color/white"
                    android:textSize="30sp" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/rounded"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/et_email_address"
                        style="@style/Theme.Tasky.Styled.EditText.Inter.Regular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email_address"
                        android:inputType="textEmailAddress"
                        android:text="@={viewModel.state.email}" />

                    <EditText
                        android:id="@+id/et_password"
                        style="@style/Theme.Tasky.Styled.EditText.Inter.Regular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:text="@={viewModel.state.password}" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_login"
                        style="@style/Theme.Tasky.Styled.Button.Inter.Regular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/rounded_button"
                        android:onClick="@{(view) -> viewModel.login()}"
                        android:text="@string/log_in" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="30dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/Theme.Tasky.Styled.TextView.Inter.Regular"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:clickable="false"
                        android:focusable="false"
                        android:text="@string/dont_have_an_account"
                        android:textAllCaps="true"
                        android:textColor="@color/Black" />

                    <TextView
                        style="@style/Theme.Tasky.Styled.TextView.Inter.Regular"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:clickable="false"
                        android:focusable="false"
                        android:text="@string/sign_up"
                        android:textAllCaps="true"
                        android:textColor="@color/Blue" />

                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </FrameLayout>
</layout>
